# server/swagger/swagger.json
@@ -587,7 +587,7 @@
         },
         "/api/v1/group/ass-menus": {
             "get": {
-                "description": "返回组关联的菜单",
+                "description": "由于swagger本身的限制，get请求的切片会报错，并非接口本身问题，请换个方式，如http://127.0.0.1:9081/api/v1/group/apis?ids=3\u0026ids=4",
                 "produces": [
                     "application/json"
                 ],
@@ -777,7 +777,7 @@
         },
         "/api/v1/group/ass-user": {
             "get": {
-                "description": "返回组关联的用户",
+                "description": "由于swagger本身的限制，get请求的切片会报错，并非接口本身问题，请换个方式，如http://127.0.0.1:9081/api/v1/group/apis?ids=3\u0026ids=4",
                 "produces": [
                     "application/json"
                 ],
@@ -794,8 +794,12 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "name": "id",
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "collectionFormat": "csv",
+                        "name": "ids",
                         "in": "query"
                     },
                     {
@@ -2119,6 +2123,11 @@
                     },
                     {
                         "type": "integer",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
                         "description": "页码",
                         "name": "page",
                         "in": "query"
@@ -2128,12 +2137,6 @@
                         "description": "每页大小",
                         "name": "page_size",
                         "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "name": "project_id",
-                        "in": "query",
-                        "required": true
                     }
                 ],
                 "responses": {
